src/test/deca/context/invalid/without_class/while_with_wrong_condition.deca
// Description:
//    Error : Condition in while is not valid
//
// Result:
//    NOT_A_BOOLEAN_CONDITION: Expression \(.\)\+ is not a boolean expression
//    line 11

{
    int i = 8;

    while (i) {
        print("On ne doit pas rentrer ici dans cette boucle");
    }
}